fix: if Modal open then no scrollbar

--- a/styles/assets.css
+++ b/styles/assets.css
@@ -1,10 +1,8 @@
-
-
 /* header */
 #search-bar {
   position: absolute;
   top: 10px;
-  right: 20px;  
+  right: 20px;
   width: 100%;
   max-width: 250px;
   padding: 10px 15px;
@@ -99,7 +97,7 @@
   font-size: 0.85rem;
   text-transform: uppercase;
 }
-#search-switch-include-filter{
+#search-switch-include-filter {
   position: absolute;
   top: 15px;
   left: 270px;
@@ -115,13 +113,17 @@
   position: fixed;
   bottom: 20px;
   right: 20px;
-  z-index: 11; 
+  z-index: 11;
   border-radius: 50px;
   padding: 10px 16px;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
 }
 
 /* ab hier das Modal */
+body.modal-open {
+  overflow: hidden;
+}
+
 .pokemon-modal-overlay {
   position: fixed;
   top: 0;
@@ -200,7 +202,7 @@
     transform: rotate(360deg);
   }
 }
- /* Responsive Styles */
+/* Responsive Styles */
 @media (max-width: 768px) {
   #pokedex-container {
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
